<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/add_funds"
        android:title="@string/addFunds_string"
		app:showAsAction="always"
		android:icon="@drawable/add_funds"/>
	<item
		android:id="@+id/sub_funds"
		android:title="@string/subFunds_string"
		app:showAsAction="always"
		android:icon="@drawable/sub_funds"
		/>
	<item
		android:id="@+id/set_funds"
		android:title="@string/setFunds_string"
		app:showAsAction="always"
		android:icon="@drawable/set_funds"
		/> 
	<item
		android:id="@+id/new_bill"
		android:title="@string/newBill_string"
		android:icon="@drawable/new_bill"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/view_log"
		android:title="@string/viewLog_string"/>
	<item
		android:id="@+id/income_setup"
		android:title="@string/setupIncome_string"/>

</menu>
